# arm_kinematics

./: .gitignore  CMakeLists.txt  Project_Report.docx  README.md  package.xml  setup.py
config/: controllers.yaml  joint_limits.yaml
launch/: arm_gazebo.launch  arm_simulation.launch
rviz/: arm_view.rviz
scripts/: arm_controller.py  inverse_kinematics.py  tf2_broadcaster.py  trajectory_planner.py
src/arm_kinematics/: __init__.py
urdf/: six_axis_arm.urdf.xacro
