<?xml version="1.0"?>
<package format="2">
  <name>arm_kinematics</name>
  <version>1.0.0</version>
  <description>
    6-axis robotic arm kinematics and path planning using ROS Noetic.
    Implements Forward/Inverse Kinematics, TF2 transform tree,
    cubic spline trajectory planning, and Gazebo physics simulation.
  </description>
  <maintainer email="user@example.com">DecodeLabs Intern</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>controller_manager</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
